--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.0.0...3.10.2)
 project(main VERSION 0.1.0)
 
 # include(CTest)
+enable_testing()
 
-add_executable(main main.cpp)
+# add_executable(main main.cpp)
+add_subdirectory(src)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
